force-app/main/default/objects/NotionWidget__mdt/NotionWidget__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Notion database widgets that can be embedded in Lightning pages</description>
    <label>Notion Widget</label>
    <pluralLabel>Notion Widgets</pluralLabel>
</CustomObject>