force-app/main/default/objects/NotionWidget__mdt/fields/ContextObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ContextObjectApiName__c</fullName>
    <description>The Salesforce object API name for context record filtering (e.g., Account, Contact). Used to determine which fields are available for context-based filters.</description>
    <label>Context Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>