force-app/main/default/objects/NotionWidget__mdt/fields/ContextRelationProperty__c.field-meta.xml
<CustomField>
    <fullName>ContextRelationProperty__c</fullName>
    <description>Name of the Notion relation property on the target database that relates pages to the context Notion page. When set, the widget acts like a Salesforce related list: rows are filtered to those whose relation includes the context Notion page, and new pages created from the widget have this relation auto-populated with the context Notion page.</description>
    <label>Context Relation Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>