force-app/main/default/objects/NotionWidget__mdt/fields/DefaultSortDirection__c.field-meta.xml
<CustomField>
    <fullName>DefaultSortDirection__c</fullName>
    <description>The default sort direction</description>
    <label>Default Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ascending</fullName>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>descending</fullName>
                <default>true</default>
                <label>Descending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>