force-app/main/default/objects/NotionWidget__mdt/fields/DefaultSortProperty__c.field-meta.xml
<CustomField>
    <fullName>DefaultSortProperty__c</fullName>
    <description>The Notion property name to sort by default</description>
    <label>Default Sort Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>