force-app/main/default/objects/NotionWidget__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this widget is active and available for use</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>