force-app/main/default/objects/NotionWidget__mdt/fields/NotionDatabaseId__c.field-meta.xml
<CustomField>
    <fullName>NotionDatabaseId__c</fullName>
    <description>The ID of the Notion database to display in this widget</description>
    <label>Notion Database ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>