force-app/main/default/objects/NotionWidget__mdt/fields/PageSize__c.field-meta.xml
<CustomField>
    <fullName>PageSize__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Number of rows to display per page (max 100)</description>
    <label>Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>