force-app/main/default/objects/NotionWidget__mdt/fields/ShowNewButton__c.field-meta.xml
<CustomField>
    <fullName>ShowNewButton__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to show the "New" button on the widget that lets users create a new page in the target Notion database.</description>
    <label>Show New Button</label>
    <type>Checkbox</type>
</CustomField>